add ini file to load/save serialport configs

--- a/SerialPortPlusPlus/SerialPortPlusPlus.csproj
+++ b/SerialPortPlusPlus/SerialPortPlusPlus.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
+    <Compile Include="Helper\IniHelper.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
